Closed Bug 1523907 Opened 7 years ago Closed 7 years ago

Perma browser/components/sessionstore/test/browser_393716.js | Test timed out when Gecko 67 merges to beta on 2019-03-11

Categories

(Firefox :: Session Restore, defect, P1)

defect

Tracking

()

VERIFIED FIXED
Firefox 67
Tracking Status
firefox-esr60 --- unaffected
firefox65 --- unaffected
firefox66 --- unaffected
firefox67 + fixed

People

(Reporter: RaulG, Assigned: Paolo)

References

Details

Attachments

(1 file)

[Tracking Requested - why for this release]:

Central as Beta simulation: https://treeherder.mozilla.org/#/jobs?repo=try&resultStatus=testfailed%2Cbusted%2Cexception&revision=ef4f2ab030d398e763fcd0ed82ca620ec32de69c&selectedJob=224932136

Log link: https://treeherder.mozilla.org/logviewer.html#/jobs?job_id=224932136&repo=try&lineNumber=1562

Log snippet:

[task 2019-01-30T11:29:49.539Z] 11:29:49 INFO - TEST-START | browser/components/sessionstore/test/browser_393716.js
[task 2019-01-30T11:29:50.210Z] 11:29:50 INFO - GECKO(1093) | JavaScript error: chrome://mochitests/content/browser/browser/components/sessionstore/test/content-forms.js, line 65: TypeError: input is null
[task 2019-01-30T11:31:19.568Z] 11:31:19 INFO - TEST-INFO | started process screentopng
[task 2019-01-30T11:31:20.136Z] 11:31:20 INFO - TEST-INFO | screentopng: exit 0
[task 2019-01-30T11:31:20.137Z] 11:31:20 INFO - Buffered messages logged at 11:29:49
[task 2019-01-30T11:31:20.138Z] 11:31:20 INFO - Entering test bound setup
[task 2019-01-30T11:31:20.140Z] 11:31:20 INFO - Leaving test bound setup
[task 2019-01-30T11:31:20.141Z] 11:31:20 INFO - Entering test bound test_set_tabstate
[task 2019-01-30T11:31:20.142Z] 11:31:20 INFO - TEST-PASS | browser/components/sessionstore/test/browser_393716.js | get the tab's state -
[task 2019-01-30T11:31:20.145Z] 11:31:20 INFO - TEST-PASS | browser/components/sessionstore/test/browser_393716.js | state object seems valid -
[task 2019-01-30T11:31:20.146Z] 11:31:20 INFO - TEST-PASS | browser/components/sessionstore/test/browser_393716.js | Got the expected state object (test URL) -
[task 2019-01-30T11:31:20.148Z] 11:31:20 INFO - TEST-PASS | browser/components/sessionstore/test/browser_393716.js | Got the expected state object (test manually set tab value) -
[task 2019-01-30T11:31:20.150Z] 11:31:20 INFO - Leaving test bound test_set_tabstate
[task 2019-01-30T11:31:20.151Z] 11:31:20 INFO - Entering test bound test_set_tabstate_and_duplicate
[task 2019-01-30T11:31:20.153Z] 11:31:20 INFO - Buffered messages logged at 11:29:50
[task 2019-01-30T11:31:20.154Z] 11:31:20 INFO - TEST-PASS | browser/components/sessionstore/test/browser_393716.js | the tab's state was correctly restored -
[task 2019-01-30T11:31:20.156Z] 11:31:20 INFO - Console message: [JavaScript Error: "TypeError: input is null" {file: "chrome://mochitests/content/browser/browser/components/sessionstore/test/content-forms.js" line: 65}]
[task 2019-01-30T11:31:20.158Z] 11:31:20 INFO - Buffered messages finished
[task 2019-01-30T11:31:20.160Z] 11:31:20 INFO - TEST-UNEXPECTED-FAIL | browser/components/sessionstore/test/browser_393716.js | Test timed out -
[task 2019-01-30T11:31:20.161Z] 11:31:20 INFO - GECKO(1093) | MEMORY STAT | vsize 20974013MB | residentFast 1127MB
[task 2019-01-30T11:31:20.162Z] 11:31:20 INFO - TEST-OK | browser/components/sessionstore/test/browser_393716.js | took 90058ms
[task 2019-01-30T11:31:20.163Z] 11:31:20 INFO - Not taking screenshot here: see the one that was previously logged
[task 2019-01-30T11:31:20.163Z] 11:31:20 INFO - TEST-UNEXPECTED-FAIL | browser/components/sessionstore/test/browser_393716.js | Found a tab after previous test timed out: about:config -
[task 2019-01-30T11:31:20.164Z] 11:31:20 INFO - checking window state
[task 2019-01-30T11:31:20.165Z] 11:31:20 INFO - TEST-START | browser/components/sessionstore/test/browser_394759_behavior.js
[task 2019-01-30T11:31:30.204Z] 11:31:30 INFO - GECKO(1093) | MEMORY STAT | vsize 20974046MB | residentFast 1166MB
[task 2019-01-30T11:31:30.205Z] 11:31:30 INFO - TEST-OK | browser/components/sessionstore/test/browser_394759_behavior.js | took 10457ms

Hi Paolo,

This Beta simulation failure seems to be related to bug 1521765, can you please take a look?

Flags: needinfo?(paolo.mozmail)
Assignee: nobody → aryx.bugmail
Status: NEW → ASSIGNED
Flags: needinfo?(paolo.mozmail)
Assignee: aryx.bugmail → paolo.mozmail

I haven't tested the patch yet, but this is likely the reason why the Beta simulation fails.

https://treeherder.mozilla.org/#/jobs?repo=try&revision=5141a76741bd0566b45308be6babdd71c5dcb3b3

Attachment #9040122 - Attachment description: Bug 1523907 - Enable building the new "about:config" page on release channels. r=mak → Bug 1523907 - Fix building the new "about:config" page on release channels. r=mak
Priority: -- → P1

Andreea, does the latest patch fix the Beta simulations?

Flags: needinfo?(apavel)

Paolo, the tests have finished, the failure no longer occurs with the latest patch imported.

Flags: needinfo?(paolo.mozmail)

That's great to know, thanks!

Flags: needinfo?(paolo.mozmail)

(In reply to :Paolo Amadini from comment #9)

That's great to know, thanks!

Shouldn't we land this?

Flags: needinfo?(paolo.mozmail)

Yes, but it only got a review yesterday. I'll push when the trees reopen.

Flags: needinfo?(paolo.mozmail)

There were some failures today on beta simulations because patch was not imported.

Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 67
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: