Bug 1523907 - Fix building the new "about:config" page on release channels. r=mak

Differential Revision: https://phabricator.services.mozilla.com/D18082

--HG--
extra : rebase_source : 7094aa1a5dbfc33d7b77a387f12eb14cff66d9e9